--- a/Gmt/public/styles/site.css
+++ b/Gmt/public/styles/site.css
@@ -4932,6 +4932,33 @@ button.close {
 .no-padding {
   padding: 0; }
 
+#navprocedure, #navdoctor, #navprovider {
+  width: 100%; }
+  #navprocedure a.active, #navdoctor a.active, #navprovider a.active {
+    color: #1abc9c; }
+
+/* Sticky scrollbar on scroll down */
+#navprocedure.sticky {
+  position: fixed;
+  top: 112px;
+  z-index: 999;
+  width: 66.8%; }
+
+#navdoctor.sticky {
+  position: fixed;
+  top: 112px;
+  z-index: 999;
+  width: 66.8%; }
+
+#navprovider.sticky {
+  position: fixed;
+  top: 112px;
+  z-index: 999;
+  width: 66.8%; }
+
+#navstick.offset {
+  padding-top: 40px; }
+
 table {
   border-collapse: separate;
   border-spacing: 0;
@@ -5090,6 +5117,8 @@ table tr:last-child td:last-child {
   margin-left: 0;
   margin-right: 0;
   margin-top: 112px; }
+  .marginAlign .border {
+    border-right: 1px solid #ededed; }
 
 .procedure {
   overflow: hidden;
@@ -5106,12 +5135,13 @@ table tr:last-child td:last-child {
   font-family: SourceSansPro-Regular;
   font-size: 16px;
   text-align: justify;
-  padding: 20px 0; }
+  padding: 20px 0;
+  margin-bottom: 0; }
 
-#prov, #doct, #proce, #speciality, #reviews {
+#over {
   border-top: 1px solid #ededed;
   padding-top: 10px; }
-  #prov span, #doct span, #proce span, #speciality span, #reviews span {
+  #over span {
     position: relative;
     top: 10px;
     font-family: SourceSansPro-Semibold;
@@ -5174,7 +5204,8 @@ table tr:last-child td:last-child {
   .doc_proc .doc_border {
     border: 1px solid #e5e5e5;
     border-radius: 4px;
-    margin-top: 20px; }
+    margin-top: 20px;
+    margin-bottom: 20px; }
 
 .panel-default {
   border-width: 0; }
@@ -5374,7 +5405,8 @@ a {
 
 a:hover {
   color: black;
-  background-color: inherit; }
+  background-color: inherit;
+  text-decoration: none; }
 
 .nav > li > a:hover, .nav > li > a:focus {
   color: black;
