--- a/Gmt/templates/views/partials/footer.hbs
+++ b/Gmt/templates/views/partials/footer.hbs
@@ -1,4 +1,4 @@
-<nav class="footer">
+<div class="footer">
 	<div class="fluid-container">
 		<div class="foot row" style="">
 			<div class="col-md-4 col-lg-4 col-xs-4 col-sm-4">
@@ -60,4 +60,4 @@
 
 	</div>
 </div>
-</nav>
+</div>
