--- a/Gmt/templates/views/provider.hbs
+++ b/Gmt/templates/views/provider.hbs
@@ -1,5 +1,5 @@
 <!-- <div class="container"> -->
-	{{>header}}
+{{>header}}
 <div class="row marginAlign">
 	<div class="col-lg-8 col-sm-8 col-xs-8 col-md-8 border no-padding">
 
@@ -37,142 +37,157 @@
 			</a>
 		</div>
 
-		<div class="scrolls" data-spy="scroll" data-target="#navbar-example">
-			<nav class="navbar navbar-default">
-				<ul class="nav navbar-nav row" style="padding-top: 8px;">
-					<li class="col-lg-1 col-sm-1 col-xs-1 col-md-1">&nbsp;</li>
-					<li class="col-lg-2 col-sm-2 col-xs-2 col-md-2 "><a href="#about">About</a></li>
-					<li class="col-lg-2 col-sm-2 col-xs-2 col-md-2"><a href="#doctors">Doctors</a></li>
-					<li class="col-lg-3 col-sm-3 col-xs-3 col-md-3"><a href="#speciality" style="margin-left:7px;">Speciality</a></li>
-					<li class="col-lg-2 col-sm-2 col-xs-2 col-md-2"><a href="#reviews">Reviews</a></li>
-				</ul>
-			</nav>
-
-			<h4 id="about"></h4>
-			<div class="row ">
-				<div class="col-lg-1 col-sm-1 col-xs-1 col-md-1">
-				</div>
-				<div class="col-lg-10 col-sm-10 col-xs-10 col-md-10 para">
-					{{{provider.description}}}
-				</div>
-				<div class="col-lg-1 col-sm-1 col-xs-1 col-md-1">
-				</div>
-			</div>
-			<h4 id="doctors">
-				<div class="row">
+		<!-- <div class="scrolls" data-spy="scroll" data-target="#navbar-example"> -->
+		<nav class="navbar navbar-default" id="navprovider">
+			<ul id="myNavbar" class="nav navbar-nav row" style="padding-top: 8px;">
+				<li class="col-lg-1 col-sm-1 col-xs-1 col-md-1">&nbsp;</li>
+				<li data-menuanchor="about" class="col-lg-2 col-sm-2 col-xs-2 col-md-2 ">
+					<a class="demo" href="#section1">About</a>
+				</li>
+				<li data-menuanchor="doctors" class="col-lg-2 col-sm-2 col-xs-2 col-md-2">
+					<a class="demo" href="#section2">Doctors</a>
+				</li>
+				<li data-menuanchor="speciality" class="col-lg-3 col-sm-3 col-xs-3 col-md-3">
+					<a class="demo" href="#section3" style="margin-left:7px;">Speciality</a>
+				</li>
+				<li data-menuanchor="reviews" class="col-lg-2 col-sm-2 col-xs-2 col-md-2">
+					<a class="demo" href="#section4">Reviews</a>
+				</li>
+			</ul>
+		</nav>
+		<div id="navstick">
+			<section id="section1">
+				<h4 id=""></h4>
+				<div class="row ">
 					<div class="col-lg-1 col-sm-1 col-xs-1 col-md-1">
 					</div>
-					<div class="col-lg-3 col-sm-3 col-xs-3 col-md-3">
-						<span>Doctors</span>
+					<div class="col-lg-10 col-sm-10 col-xs-10 col-md-10 para">
+						{{{provider.description}}}
 					</div>
-					<div class="col-lg-8 col-sm-8 col-xs-8 col-md-8">
+					<div class="col-lg-1 col-sm-1 col-xs-1 col-md-1">
 					</div>
 				</div>
-			</h4>
-			<div class="q">
-				<div class="p">
-					{{#each provider.doctors}}
-						<div class="row proc">
-							<div class="col-lg-1 col-sm-1 col-xs-1 col-md-1">
-							</div>
-							<div class="col-lg-2 col-sm-2 col-xs-2 col-md-2 ">
-								<img src="images/logo.png">
-							</div>
-							<div class="col-lg-5 col-sm-5 col-xs-5 col-md-5  procedure-doc">
-								<h4><a href="/doctor/{{key}}">{{name}}</a></h4>
-								{{{description}}}
-							</div>
-							<div class="col-lg-2 col-sm-3 col-xs-2 col-md-2">
-								<!-- <input type="text" class="form-control" id="text" value="View Profile"> -->
-								<a href="" id="link" style="">View Profile</a>
-							</div>
-							<div class="col-lg-1 col-sm-0 col-xs-1 col-md-1">
-							</div>
+			</section>
+			<section id="section2">
+				<h4 id="over">
+					<div class="row">
+						<div class="col-lg-1 col-sm-1 col-xs-1 col-md-1">
 						</div>
-					{{/each}}
-				</div>
-			</div>
-
-			<h4 id="speciality">
-				<div class="row">
-					<div class="col-lg-1 col-sm-1 col-xs-1 col-md-1">
+						<div class="col-lg-3 col-sm-3 col-xs-3 col-md-3">
+							<span>Doctors</span>
+						</div>
+						<div class="col-lg-8 col-sm-8 col-xs-8 col-md-8">
+						</div>
 					</div>
-					<div class="col-lg-3 col-sm-3 col-xs-3 col-md-3">
-						<span>Speciality</span>
-					</div>
-					<div class="col-lg-8 col-sm-8 col-xs-8 col-md-8">
-					</div>
-				</div>
-			</h4>
-
-			<div class="row doc_proc">
-				<div class="col-lg-1 col-sm-1 col-xs-1 col-md-1">
-				</div>
-				<div class="col-lg-10 col-sm-10 col-xs-10 col-md-10 doc_border" style="">
-					<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
-						{{#each specialities}}
-
-							<div class="panel panel-default">
-								<div class="panel-heading" role="tab" id="headingOne">
-									<h4 class="panel-title">
-										<a role="button" data-toggle="collapse" data-parent="#accordion" href="#{{key}}" aria-expanded="false" aria-controls="collapseOne">
-											<div class="row accordion">
-												<div class="col-lg-11 col-sm-11 col-xs-11 col-md-11 title">
-													{{name}}
-												</div>
-												<div class="col-lg-1 col-sm-1 col-xs-1 col-md-1 icon" style="color: #d6d2d2;">
-													<span class="glyphicon glyphicon-chevron-down" style=""></span>
-												</div>
-
-											</div>
-										</a>
-									</h4>
+				</h4>
+				<div class="q">
+					<div class="p">
+						{{#each provider.doctors}}
+							<div class="row proc">
+								<div class="col-lg-1 col-sm-1 col-xs-1 col-md-1">
 								</div>
-								<div id="{{key}}" class="panel-collapse collapse " role="tabpanel" aria-labelledby="headingOne">
-									<div class="panel-body">
-										{{#each procedures}}
-											<div class="row provider_procedures" style="padding-bottom: 10px;">
-												<div class="col-lg-8 col-sm-8 col-xs-8 col-md-8 title">
-													<span>{{name}}</span>
-												</div>
-												<div class="col-lg-2 col-sm-2 col-xs-2 col-md-2 price">
-													<span>₹ {{price}}</span>
-												</div>
-												<div class="col-lg-2 col-sm-2 col-xs-2 col-md-2">
-													<input class="btn btn-primary btn-md procedure_btn" type="submit" value="Enquiry" >
-												</div>
-											</div>
-										{{/each}}
-									</div>
+								<div class="col-lg-2 col-sm-2 col-xs-2 col-md-2 ">
+									<img src="images/logo.png">
+								</div>
+								<div class="col-lg-5 col-sm-5 col-xs-5 col-md-5  procedure-doc">
+									<h4><a href="/doctor/{{key}}">{{name}}</a></h4>
+									{{{description}}}
+								</div>
+								<div class="col-lg-2 col-sm-3 col-xs-2 col-md-2">
+									<!-- <input type="text" class="form-control" id="text" value="View Profile"> -->
+									<a href="" id="link" style="">View Profile</a>
+								</div>
+								<div class="col-lg-1 col-sm-0 col-xs-1 col-md-1">
 								</div>
 							</div>
 						{{/each}}
 					</div>
 				</div>
-				<div class="col-lg-1 col-sm-1 col-xs-1 col-md-1">
-				</div>
-			</div>
-			<h4 id="reviews">
-				<div class="row">
+			</section>
+			<section id="section3">
+				<h4 id="over">
+					<div class="row">
+						<div class="col-lg-1 col-sm-1 col-xs-1 col-md-1">
+						</div>
+						<div class="col-lg-3 col-sm-3 col-xs-3 col-md-3">
+							<span>Speciality</span>
+						</div>
+						<div class="col-lg-8 col-sm-8 col-xs-8 col-md-8">
+						</div>
+					</div>
+				</h4>
+
+				<div class="row doc_proc">
 					<div class="col-lg-1 col-sm-1 col-xs-1 col-md-1">
 					</div>
-					<div class="col-lg-8 col-sm-8 col-xs-8 col-md-8">
-						<span>Reviews</span>
+					<div class="col-lg-10 col-sm-10 col-xs-10 col-md-10 doc_border" style="">
+						<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+							{{#each specialities}}
+
+								<div class="panel panel-default">
+									<div class="panel-heading" role="tab" id="headingOne">
+										<h4 class="panel-title">
+											<a role="button" data-toggle="collapse" data-parent="#accordion" href="#{{key}}" aria-expanded="false" aria-controls="collapseOne">
+												<div class="row accordion">
+													<div class="col-lg-11 col-sm-11 col-xs-11 col-md-11 title">
+														{{name}}
+													</div>
+													<div class="col-lg-1 col-sm-1 col-xs-1 col-md-1 icon" style="color: #d6d2d2;">
+														<span class="glyphicon glyphicon-chevron-down" style=""></span>
+													</div>
+
+												</div>
+											</a>
+										</h4>
+									</div>
+									<div id="{{key}}" class="panel-collapse collapse " role="tabpanel" aria-labelledby="headingOne">
+										<div class="panel-body">
+											{{#each procedures}}
+												<div class="row provider_procedures" style="padding-bottom: 10px;">
+													<div class="col-lg-8 col-sm-8 col-xs-8 col-md-8 title">
+														<span>{{name}}</span>
+													</div>
+													<div class="col-lg-2 col-sm-2 col-xs-2 col-md-2 price">
+														<span>₹ {{price}}</span>
+													</div>
+													<div class="col-lg-2 col-sm-2 col-xs-2 col-md-2">
+														<input class="btn btn-primary btn-md procedure_btn" type="submit" value="Enquiry">
+													</div>
+												</div>
+											{{/each}}
+										</div>
+									</div>
+								</div>
+							{{/each}}
+						</div>
 					</div>
-					<div class="col-lg-3 col-sm-3 col-xs-3 col-md-3">
+					<div class="col-lg-1 col-sm-1 col-xs-1 col-md-1">
 					</div>
 				</div>
-			</h4>
-			<!-- <span class="glyphicon glyphicon-star" style="margin-left:30px"></span>
+			</section>
+			<section id="section4">
+				<h4 id="over">
+					<div class="row">
+						<div class="col-lg-1 col-sm-1 col-xs-1 col-md-1">
+						</div>
+						<div class="col-lg-8 col-sm-8 col-xs-8 col-md-8">
+							<span>Reviews</span>
+						</div>
+						<div class="col-lg-3 col-sm-3 col-xs-3 col-md-3">
+						</div>
+					</div>
+				</h4>
+				<!-- <span class="glyphicon glyphicon-star" style="margin-left:30px"></span>
 			<span class="glyphicon glyphicon-star"></span>
 			<span class="glyphicon glyphicon-star"></span> -->
-			{{#each provider.reviews}}
+				{{#each provider.reviews}}
 
-				<div> {{{comments}}} --> {{hits}}
-				</div>
-			{{/each}}
-
+					<div> {{{comments}}} --> {{hits}}
+					</div>
+				{{/each}}
+			</section>
 		</div>
+		<!-- </div> -->
 	</div>
 	<div class="col-lg-4 col-sm-4 col-xs-4 col-md-4 no-padding name">
 		<h3>{{provider.name}}</h3>
@@ -224,3 +239,8 @@
 </div>
 <!-- </div> -->
 {{>footer}}
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<script src="/js/smooth-scroller.js"></script>
+<script src="/js/mainScript.js"></script>
+<script src="/js/pro.js"></script>
+<script src="/js/navbar.js"></script>
