--- a/Gmt/templates/views/index.hbs
+++ b/Gmt/templates/views/index.hbs
@@ -42,7 +42,7 @@
 								<h2 style="margin-top:0px; font-size:30px;font-family:SourceSansPro-Semibold;"> Explore the various arts of yoga</h2>
 							</div>
 							<div class="col-lg-4 no-padding" style="right:15px;">
-							<span style="font-size:18px;font-family:SourceSansPro-Regular;border:1px solid white; padding: 5px 10px;;border-radius:5px;">learn more...</span>
+								<span style="font-size:18px;font-family:SourceSansPro-Regular;border:1px solid white; padding: 5px 10px;;border-radius:5px;">learn more...</span>
 							</div>
 						</div>
 					</div>
@@ -55,12 +55,12 @@
 						<h2 style="margin-top:0px; font-size:30px;font-family:SourceSansPro-Semibold;">Preventive care programs</h2>
 						<div class="row">
 							<div class="col-lg-5">
-			     	<h2 style="margin-top:0px; font-size:30px;font-family:SourceSansPro-Semibold;">Curative healing packages</h2>
-					</div>
-					<div class="col-lg-4 no-padding">
-					<span style="font-size:18px;font-family:SourceSansPro-Regular;border:1px solid white; padding: 5px 10px;;border-radius:5px;">learn more...</span>
-					</div>
-				</div>
+								<h2 style="margin-top:0px; font-size:30px;font-family:SourceSansPro-Semibold;">Curative healing packages</h2>
+							</div>
+							<div class="col-lg-4 no-padding">
+								<span style="font-size:18px;font-family:SourceSansPro-Regular;border:1px solid white; padding: 5px 10px;;border-radius:5px;">learn more...</span>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -94,71 +94,77 @@
 			<div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
 				<div class="row">
 					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4" style="padding-right: 0px; padding-left: 0px;">
-						<div class="thumbnail   " style="padding-left: 90px;border:none;">
-							<div style="border: rgb(83,200,171) 1px solid;border-bottom:none;  border-top-left-radius: 10px;border-top-right-radius: 10px;">
-								<img alt="Goa Medical Travel" src="/images/Icons_Hospital Home.png" class="image  " align="middle" style="" />
-							</div>
-							<!-- <img alt="Goa Medical Travel" src="/images/bariatrics.png" class="  " align="middle"
-							style="margin-bottom: 0px;width:20%;height:auto;border-color:rgb(83,200,171);" /> -->
-							<div class="thumbnail  " style="margin-bottom: 0px; border-color:rgb(83,200,171);background-color:rgb(83,200,171);color:white;font-family:SourceSansPro-Regular;border-bottom-left-radius: 10px;border-bottom-right-radius: 10px;">
-								<h4 style="font-family:SourceSansPro-Semibold;text-align:center;font-size:24px;">Providers</h4>
-								<p style="padding-top: 0px;font-family:SourceSansPro-Regular;margin-top: -5px;">Providers dfyhrtf gj</p>
-								<p style="padding-top: 0px;font-family:SourceSansPro-Regular;margin-top: -5px;">Providers fgjhg</p>
-								<p style="padding-top: 0px;font-family:SourceSansPro-Regular;margin-top: -5px;">Providers gfjhgkj ftyhtr</p>
-								<p style="padding-top: 0px;font-family:SourceSansPro-Regular;margin-top: -5px;">Providers gfjhgkj ftyhtr</p>
-								<div style=" text-align:center">
-									<a href="/services" style="text-decoration:none;font-family:SourceSansPro-Regular;color:white;font-size:16px;">
-								Learn More ...
-							</a>
+						<a href="/providers/hospitals" style="outline:none;">
+							<div class="thumbnail   " style="padding-left: 90px;border:none;">
+								<div style="border: rgb(83,200,171) 1px solid;border-bottom:none;  border-top-left-radius: 10px;border-top-right-radius: 10px;">
+									<img alt="Goa Medical Travel" src="/images/Icons_Hospital Home.png" class="image  " align="middle" style="" />
 								</div>
-							</div>
+								<!-- <img alt="Goa Medical Travel" src="/images/bariatrics.png" class="  " align="middle"
+							style="margin-bottom: 0px;width:20%;height:auto;border-color:rgb(83,200,171);" /> -->
+								<div class="thumbnail  " style="margin-bottom: 0px; border-color:rgb(83,200,171);background-color:rgb(83,200,171);color:white;font-family:SourceSansPro-Regular;border-bottom-left-radius: 10px;border-bottom-right-radius: 10px;">
+									<h4 style="font-family:SourceSansPro-Semibold;text-align:center;font-size:24px;">Providers</h4>
+									<p style="padding-top: 0px;font-family:SourceSansPro-Regular;margin-top: -5px;">Find the right provider</p>
+									<p style="padding-top: 0px;font-family:SourceSansPro-Regular;margin-top: -5px;">Learn about the facilities</p>
+									<p style="padding-top: 0px;font-family:SourceSansPro-Regular;margin-top: -5px;">Request for a free quote</p>
+									<p style="padding-top: 0px;font-family:SourceSansPro-Regular;margin-top: -5px;">Send customised queries</p>
+									<div style=" text-align:center">
+										<span style="text-decoration:none;font-family:SourceSansPro-Regular;color:white;font-size:16px;">
+											Learn More ...
+										</span>
+									</div>
+								</div>
 
-						</div>
+							</div>
+						</a>
 					</div>
 
 					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4" style="padding-right: 0px; padding-left: 0px;">
-						<div class="thumbnail  " style="padding-left: 45px;padding-right:45px;border-color:rgb(255,255,255)">
-							<div style="border: rgb(83,200,171) 1px solid;border-bottom:none;border-top-left-radius: 10px;border-top-right-radius: 10px;">
-								<img alt="Goa Medical Travel" src="/images/poo.png" class="image1 " style="width:47%;height:auto;	margin-bottom: 0;	margin-left: auto;margin-right: auto;
+						<a href="/procedure/bones-and-joints" style="outline:none;">
+							<div class="thumbnail  " style="padding-left: 45px;padding-right:45px;border-color:rgb(255,255,255)">
+								<div style="border: rgb(83,200,171) 1px solid;border-bottom:none;border-top-left-radius: 10px;border-top-right-radius: 10px;">
+									<img alt="Goa Medical Travel" src="/images/poo.png" class="image1 " style="width:47%;height:auto;	margin-bottom: 0;	margin-left: auto;margin-right: auto;
 									display: block;
 									padding: 25px 0 15px 5px;" />
-							</div>
-							<div class="thumbnail  " style="margin-bottom: 0px; border-color:rgb(83,200,171);background-color:rgb(83,200,171);color:white;font-family:SourceSansPro-Regular;border-bottom-left-radius: 10px;border-bottom-right-radius: 10px;">
-								<h4 style="font-family:SourceSansPro-Semibold;text-align:center;font-size:24px;">Specialities</h4>
-								<p style="padding-top: 0px;font-family:SourceSansPro-Regular;margin-top: -5px;">Providers</p>
-								<p style="padding-top: 0px;font-family:SourceSansPro-Regular;margin-top: -5px;">Providers</p>
-								<p style="padding-top: 0px;font-family:SourceSansPro-Regular;margin-top: -5px;">Providers</p>
-								<p style="padding-top: 0px;font-family:SourceSansPro-Regular;margin-top: -5px;">Providers</p>
-								<div style=" text-align:center">
-									<a href="/services" style="text-decoration:none;font-family:SourceSansPro-Regular;color:white;font-size:16px;">
-								Learn More ...
-							</a>
 								</div>
-							</div>
+								<div class="thumbnail  " style="margin-bottom: 0px; border-color:rgb(83,200,171);background-color:rgb(83,200,171);color:white;font-family:SourceSansPro-Regular;border-bottom-left-radius: 10px;border-bottom-right-radius: 10px;">
+									<h4 style="font-family:SourceSansPro-Semibold;text-align:center;font-size:24px;">Specialities</h4>
+									<p style="padding-top: 0px;font-family:SourceSansPro-Regular;margin-top: -5px;">Search by the treatment</p>
+									<p style="padding-top: 0px;font-family:SourceSansPro-Regular;margin-top: -5px;">Find provider/doctor option</p>
+									<p style="padding-top: 0px;font-family:SourceSansPro-Regular;margin-top: -5px;">Understand pricing</p>
+									<p style="padding-top: 0px;font-family:SourceSansPro-Regular;margin-top: -5px;">Get multiple quotes</p>
+									<div style=" text-align:center">
+										<span style="text-decoration:none;font-family:SourceSansPro-Regular;color:white;font-size:16px;">
+											Learn More ...
+										</span>
+									</div>
+								</div>
 
-						</div>
+							</div>
+						</a>
 					</div>
 					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4" style="padding-right: 0px; padding-left: 0px;">
-						<div class="thumbnail  " style="padding-right: 90px;border-color:rgb(255,255,255)">
-							<div style="border: rgb(83,200,171) 1px solid;border-bottom:none;border-top-left-radius: 10px;border-top-right-radius: 10px;">
-								<img alt="Goa Medical Travel" src="/images/Icons_DoctorHome.png" class="image2  " style="width:43%;height:auto;	margin-bottom: 0;	margin-left: auto;margin-right: auto;
+						<a href="/doctors" style="outline:none;">
+							<div class="thumbnail  " style="padding-right: 90px;border-color:rgb(255,255,255)">
+								<div style="border: rgb(83,200,171) 1px solid;border-bottom:none;border-top-left-radius: 10px;border-top-right-radius: 10px;">
+									<img alt="Goa Medical Travel" src="/images/Icons_DoctorHome.png" class="image2  " style="width:43%;height:auto;	margin-bottom: 0;	margin-left: auto;margin-right: auto;
 									display: block;
 									padding: 25px 0 15px 5px;">
-							</div>
-							<div class="thumbnail  " style="margin-bottom: 0px;border-color:rgb(83,200,171);background-color:rgb(83,200,171);color:white;font-family:SourceSansPro-Regular;border-bottom-left-radius: 10px;border-bottom-right-radius: 10px;">
-								<h4 style="font-family:SourceSansPro-Semibold;text-align:center;font-size:24px;">Doctors</h4>
-								<p style="padding-top: 0px;font-family:SourceSansPro-Regular;margin-top: -5px;">Providers</p>
-								<p style="padding-top: 0px;font-family:SourceSansPro-Regular;margin-top: -5px;">Providers</p>
-								<p style="padding-top: 0px;font-family:SourceSansPro-Regular;margin-top: -5px;">Providers</p>
-								<p style="padding-top: 0px;font-family:SourceSansPro-Regular;margin-top: -5px;">Providers</p>
-								<div style=" text-align:center">
-									<a href="/services" style="text-decoration:none;font-family:SourceSansPro-Regular;color:white;font-size:16px;">
-								Learn More ...
-							</a>
 								</div>
-							</div>
+								<div class="thumbnail  " style="margin-bottom: 0px;border-color:rgb(83,200,171);background-color:rgb(83,200,171);color:white;font-family:SourceSansPro-Regular;border-bottom-left-radius: 10px;border-bottom-right-radius: 10px;">
+									<h4 style="font-family:SourceSansPro-Semibold;text-align:center;font-size:24px;">Doctors</h4>
+									<p style="padding-top: 0px;font-family:SourceSansPro-Regular;margin-top: -5px;">Find the right doctor</p>
+									<p style="padding-top: 0px;font-family:SourceSansPro-Regular;margin-top: -5px;">Get doctor specific quote</p>
+									<p style="padding-top: 0px;font-family:SourceSansPro-Regular;margin-top: -5px;">Choose appropriate facility</p>
+									<p style="padding-top: 0px;font-family:SourceSansPro-Regular;margin-top: -5px;">Get a second opinion</p>
+									<div style=" text-align:center">
+										<span style="text-decoration:none;font-family:SourceSansPro-Regular;color:white;font-size:16px;">
+											Learn More ...
+										</span>
+									</div>
+								</div>
 
-						</div>
+							</div>
+						</a>
 					</div>
 				</div>
 			</div>
@@ -177,7 +183,7 @@
 		<div class="row">
 			<div class="col-lg-1 col-md-1 col-sm-1 col-xs-1"></div>
 			<div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
-				<div class="row" style="position:absolute;">
+				<!-- <div class="row" style="position:absolute;">
 					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4" style="padding-left: 200px;">
 						<span style="font-size:24px;font-family:SourceSansPro-Regular;color:white;position:absolute;top:-90px;">Eat </span>
 					</div>
@@ -187,7 +193,7 @@
 					<div class="col-lg-4 col-md-4 col-sm-4 col-xs-4" style="padding-left: 900px;">
 						<span style="font-size:24px;font-family:SourceSansPro-Regular;color:white;position:absolute;top:-90px;">Heal </span>
 					</div>
-				</div>
+				</div> -->
 			</div>
 			<div class="col-lg-1 col-md-1 col-sm-1 col-xs-1"></div>
 
