--- a/Gmt/public/styles/site.scss
+++ b/Gmt/public/styles/site.scss
@@ -34,7 +34,7 @@ $icon-font-path: "../fonts/";
 #navprocedure,#navdoctor,#navprovider {
 				width: 100%;
 				a.active {
-				     color: #1abc9c;
+				     color: red;
 				}
 		}
 
